--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+desktop-defaults (1.3.19+nmu1) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * added homepage to debian/control
+  * added debian/source/options file
+
+ -- Ferdinand Thommes <devil@siduction.org>  Sun, 23 Oct 2011 10:23:21 +0200
+
 desktop-defaults (1.3.19) unstable; urgency=low
 
   * initial version for siduction
