--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ desktop-defaults (1.3.19+nmu1) unstable; urgency=low
   * Non-maintainer upload.
   * added homepage to debian/control
   * added debian/source/options file
+  * prepared for release candidates siduction-11.0.5
 
- -- Ferdinand Thommes <devil@siduction.org>  Sun, 23 Oct 2011 10:23:21 +0200
+ -- Ferdinand Thommes <devil@siduction.org>  Wed, 09 Nov 2011 00:47:29 +0100
 
 desktop-defaults (1.3.19) unstable; urgency=low
 
