--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ desktop-defaults (1.3.19+nmu1) unstable; urgency=low
   * added homepage to debian/control
   * added debian/source/options file
   * prepared for release candidates siduction-11.0.5
+  * fixed merge conflict
 
- -- Ferdinand Thommes <devil@siduction.org>  Wed, 09 Nov 2011 00:47:29 +0100
+ -- Ferdinand Thommes <devil@siduction.org>  Wed, 09 Nov 2011 19:23:56 +0100
 
 desktop-defaults (1.3.19) unstable; urgency=low
 
