--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ desktop-defaults (1.3.19+nmu1) unstable; urgency=low
   * added debian/source/options file
   * prepared for release candidates siduction-11.0.5
   * fixed merge conflict
+  * deleted last occurances of aptosid in comments
 
- -- Ferdinand Thommes <devil@siduction.org>  Wed, 09 Nov 2011 19:23:56 +0100
+ -- Ferdinand Thommes <devil@siduction.org>  Sat, 19 Nov 2011 00:49:35 +0100
 
 desktop-defaults (1.3.19) unstable; urgency=low
 
