--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.20) unstable; urgency=low
+
+  * fixed the conflicts
+
+ -- siduction builders <packaging@siduction.org>  Tue, 22 Nov 2011 17:53:04 +0100
+
 desktop-defaults (1.3.19+nmu1) unstable; urgency=low
 
   * Non-maintainer upload.
