--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.21) unstable; urgency=low
+
+  * Added the patch from convbsd for gdm3 theming.
+  * fixed debian/desktop-defaults-xfce.fll-xfce-desktop.default
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Fri, 25 Nov 2011 21:26:31 +0100
+
 desktop-defaults (1.3.20) unstable; urgency=low
 
   * fixed the conflicts
