--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.21.2) unstable; urgency=low
+
+  * fixed some typos in the *.default files
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Fri, 25 Nov 2011 23:04:21 +0100
+
 desktop-defaults (1.3.21.1) unstable; urgency=low
 
   * fixed the theme-name in debian/desktop-defaults-xfce.fll-xfce-desktop.default
