--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.21.2+nmu1) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * devils cleanup 
+
+ -- Alf Gaida <agaida@siduction.org>  Sat, 26 Nov 2011 13:58:14 +0100
+
 desktop-defaults (1.3.21.2) unstable; urgency=low
 
   * fixed some typos in the *.default files
