--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.21.2+nmu2) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * der musste sein, ich war zu blöde 
+
+ -- Alf Gaida <agaida@siduction.org>  Sat, 26 Nov 2011 17:38:28 +0100
+
 desktop-defaults (1.3.21.2+nmu1) unstable; urgency=low
 
   * Non-maintainer upload.
