--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.21.2+nmu3) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * 2nd try
+
+ -- Ferdinand Thommes <devil@siduction.org>  Sat, 26 Nov 2011 18:40:27 +0100
+
 desktop-defaults (1.3.21.2+nmu2) unstable; urgency=low
 
   * Non-maintainer upload.
