--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.21.2+nmu4) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * towos changes 
+
+ -- Alf Gaida <agaida@siduction.org>  Sat, 26 Nov 2011 18:54:50 +0100
+
 desktop-defaults (1.3.21.2+nmu3) unstable; urgency=low
 
   * Non-maintainer upload.
