--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.21.2+nmu5) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * fixed preseed-user-home-kde (removed <<EOF clutter)
+
+ -- Ferdinand Thommes <devil@siduction.org>  Sat, 26 Nov 2011 20:10:51 +0100
+
 desktop-defaults (1.3.21.2+nmu4) unstable; urgency=low
 
   * Non-maintainer upload.
