--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.21.3) unstable; urgency=low
+
+  * fixed some removed <<EOF EOF
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 26 Nov 2011 21:10:53 +0100
+
 desktop-defaults (1.3.21.2+nmu5) unstable; urgency=low
 
   * Non-maintainer upload.
