--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.21.4) unstable; urgency=low
+
+  * more fixes of removed <<EOF EOF
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 26 Nov 2011 21:25:56 +0100
+
 desktop-defaults (1.3.21.3) unstable; urgency=low
 
   * fixed some removed <<EOF EOF
