--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22) unstable; urgency=low
+
+  * add config for using linuxlex-icon-theme
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sun, 27 Nov 2011 19:08:56 +0100
+
 desktop-defaults (1.3.21.5) unstable; urgency=low
 
   * more fixes of removed <<EOF EOF
