--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.1) unstable; urgency=low
+
+  * fixed a typo in preseed-user-home-xfce
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sun, 27 Nov 2011 20:02:02 +0100
+
 desktop-defaults (1.3.22) unstable; urgency=low
 
   * add config for using linuxlex-icon-theme
