--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.2) unstable; urgency=low
+
+  * try to fix the launcher error for thunar
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Tue, 06 Dec 2011 19:00:36 +0100
+
 desktop-defaults (1.3.22.1) unstable; urgency=low
 
   * fixed a typo in preseed-user-home-xfce
