--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.3) unstable; urgency=low
+
+  * revert the changes from 1.3.22.2
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Tue, 06 Dec 2011 19:53:16 +0100
+
 desktop-defaults (1.3.22.2) unstable; urgency=low
 
   * try to fix the launcher error for thunar
