--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+desktop-defaults (1.3.22.4) unstable; urgency=low
+
+  * introducing me as uploader
+  *  edited debian/desktop-defaults-lxde.fll-lxde-desktop.init: 
+     fixed pcmanfm conf file path refs #429
+ 
+ -- Alf Gaida <agaida@siduction.org>  Sat, 17 Dec 2011 22:25:37 +0100
+
 desktop-defaults (1.3.22.3) unstable; urgency=low
 
   * revert the changes from 1.3.22.2
