--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.5) unstable; urgency=low
+
+  * changed fll-xfce-desktop for probing the existence of gdm3
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sun, 18 Dec 2011 15:19:23 +0100
+
 desktop-defaults (1.3.22.4) unstable; urgency=low
 
   * introducing me as uploader
