--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.22.7+nmu1) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * linked bluewater-manual.desktop
+
+ -- Ferdinand Thommes <devil@siduction.org>  Tue, 20 Dec 2011 15:46:45 +0100
+
 desktop-defaults (1.3.22.7) unstable; urgency=low
 
   * changes by coruja, request for rebuild fixes #450 
