--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.8) unstable; urgency=low
+
+  * fixed the wrong syntax fur the manual-link on the user-desktop
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Tue, 20 Dec 2011 20:54:25 +0100
+
 desktop-defaults (1.3.22.7+nmu1) unstable; urgency=low
 
   * Non-maintainer upload.
