--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.9) unstable; urgency=low
+
+  * add set lightdm theme to the xfce initscript
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Tue, 27 Dec 2011 14:59:58 +0100
+
 desktop-defaults (1.3.22.8) unstable; urgency=low
 
   * fixed the wrong syntax fur the manual-link on the user-desktop
