--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.9+nmu2) unstable; urgency=low
+
+  * needed -f to actualy add files
+
+ -- Ferdinand Thommes <devil@siduction.org>  Wed, 25 Jan 2012 11:13:34 +0100
+
 desktop-defaults (1.3.22.9+nmu1) unstable; urgency=low
 
   * Non-maintainer upload.
