--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.22.9+nmu3) unstable; urgency=low
+
+  * added razorqt directory and basic preseed-user-home-razorqt inside
+
+ -- Ferdinand Thommes <devil@siduction.org>  Wed, 25 Jan 2012 11:22:13 +0100
+
 desktop-defaults (1.3.22.9+nmu2) unstable; urgency=low
 
   * needed -f to actualy add files
