--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 desktop-defaults (1.3.22.9+nmu3) unstable; urgency=low
 
+  [ Ferdinand Thommes ]
   * added razorqt directory and basic preseed-user-home-razorqt inside
 
- -- Ferdinand Thommes <devil@siduction.org>  Wed, 25 Jan 2012 11:22:13 +0100
+  [ Alf Gaida ]
+  * fixed debian/control uploaders (comma missed)
+  * rebuild and upload fixes #580 
+
+ -- Alf Gaida <agaida@siduction.org>  Wed, 25 Jan 2012 14:10:23 +0100
 
 desktop-defaults (1.3.22.9+nmu2) unstable; urgency=low
 
