--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.23.0) unstable; urgency=low
+
+  * fix desktop-defaults-xfce.fll-xfce-desktop.init for the xsplash siduction-onestepbeyond-lu-edition
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 18 Feb 2012 23:53:03 +0100
+
 desktop-defaults (1.3.22.9+nmu3) unstable; urgency=low
 
   [ Ferdinand Thommes ]
