--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,21 @@
+desktop-defaults (1.3.23.1) unstable; urgency=low
+
+  * bump standards to 3.9.3
+  * bump compat to 9
+  * dependeny debhelper (>=9)
+  * prepared dep5 copyrights 
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 26 Feb 2012 15:36:18 +0100
+
 desktop-defaults (1.3.23.0) unstable; urgency=low
 
+  [ Torsten Wohlfarth ]
   * fix desktop-defaults-xfce.fll-xfce-desktop.init for the xsplash siduction-onestepbeyond-lu-edition
 
- -- Torsten Wohlfarth <towo@siduction.org>  Sat, 18 Feb 2012 23:53:03 +0100
+  [ Alf Gaida ]
+  * rebuild 
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 19 Feb 2012 00:16:40 +0100
 
 desktop-defaults (1.3.22.9+nmu3) unstable; urgency=low
 
