--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.23.3) unstable; urgency=low
+
+  * initiated desktop-defaults-razorqt.postinst refs #673
+
+ -- Ferdinand Thommes <devil@siduction.org>  Thu, 03 May 2012 01:40:21 +0200
+
 desktop-defaults (1.3.23.2) unstable; urgency=low
 
   * .gitignore modified
