--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 desktop-defaults (1.3.23.3) unstable; urgency=low
 
+  [ Ferdinand Thommes ]
   * initiated desktop-defaults-razorqt.postinst refs #673
 
- -- Ferdinand Thommes <devil@siduction.org>  Thu, 03 May 2012 01:40:21 +0200
+  [ Alf Gaida ]
+  * rebuild fixes #673 
+
+ -- Alf Gaida <agaida@siduction.org>  Thu, 03 May 2012 01:44:26 +0200
 
 desktop-defaults (1.3.23.2) unstable; urgency=low
 
