--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.23.4) unstable; urgency=low
+
+  * edit desktop-defaults-razorqt.postinst refs #674
+
+ -- Ferdinand Thommes <devil@siduction.org>  Thu, 03 May 2012 20:50:04 +0200
+
 desktop-defaults (1.3.23.3) unstable; urgency=low
 
   [ Ferdinand Thommes ]
