--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.3.23.6) unstable; urgency=low
+
+  * edit_3 desktop-defaults-razorqt.postinst refs #674
+
+ -- Ferdinand Thommes <devil@siduction.org>  Thu, 03 May 2012 21:07:54 +0200
+
 desktop-defaults (1.3.23.5) unstable; urgency=low
 
   * edit_2 desktop-defaults-razorqt.postinst refs #674
