--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.23.7) unstable; urgency=low
+
+  * deleted some unneeded settings for razorqt in desktop-defaults, refs
+    #675
+
+ -- Ferdinand Thommes <devil@siduction.org>  Sun, 06 May 2012 10:05:51 +0200
+
 desktop-defaults (1.3.23.6) unstable; urgency=low
 
   * edit_3 desktop-defaults-razorqt.postinst refs #674
