--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 desktop-defaults (1.3.23.7) unstable; urgency=low
 
+  [ Ferdinand Thommes ]
   * deleted some unneeded settings for razorqt in desktop-defaults, refs
     #675
 
- -- Ferdinand Thommes <devil@siduction.org>  Sun, 06 May 2012 10:05:51 +0200
+  [ Alf Gaida ]
+  * rebuild closes #675 
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 06 May 2012 10:41:17 +0200
 
 desktop-defaults (1.3.23.6) unstable; urgency=low
 
