--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.23.8) unstable; urgency=low
+
+  [ Torsten Wohlfarth ]
+  * fixed the xfce-splash
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Tue, 15 May 2012 20:22:29 +0200
+
 desktop-defaults (1.3.23.7) unstable; urgency=low
 
   [ Ferdinand Thommes ]
