--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 desktop-defaults (1.3.23.8) unstable; urgency=low
 
   [ Torsten Wohlfarth ]
-  * fixed the xfce-splash
+  * fixed xfce-splash, ksplash and lxde slim theme
 
  -- Torsten Wohlfarth <towo@siduction.org>  Tue, 15 May 2012 20:22:29 +0200
 
