--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.23.9) unstable; urgency=low
+
+  * added siduction-settings-lxde to desktop-defaults-lxde
+  * refs #712
+
+ -- Alf Gaida <agaida@siduction.org>  Sat, 19 May 2012 11:12:25 +0200
+
 desktop-defaults (1.3.23.8) unstable; urgency=low
 
   [ Torsten Wohlfarth ]
