--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.23.10) UNRELEASED; urgency=low
+
+  * some settings by coruja
+  * closes #715
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 20 May 2012 01:17:58 +0200
+
 desktop-defaults (1.3.23.9) unstable; urgency=low
 
   * added siduction-settings-lxde to desktop-defaults-lxde
