--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.3.23.11) unstable; urgency=low
+
+  * some changes sh --> bash
+  * closes #720 
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 20 May 2012 12:03:01 +0200
+
 desktop-defaults (1.3.23.10) unstable; urgency=low
 
   * some settings by coruja
