--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+desktop-defaults (1.4.1) unstable; urgency=low
+
+  * build closes #721
+  * some openbox theming
+  * version bump to 1.4
+
+ -- Alf Gaida <agaida@siduction.org>  Mon, 21 May 2012 02:35:08 +0200
+
 desktop-defaults (1.3.23.11) unstable; urgency=low
 
   * some changes sh --> bash
