--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+desktop-defaults (1.4.3) unstable; urgency=low
+
+  * change some scripting 
+
+ -- Alf Gaida <agaida@siduction.org>  Sat, 23 Jun 2012 15:16:54 +0200
+
+desktop-defaults (1.4.2) unstable; urgency=low
+
+  * change razorqt to qt and hope the best 
+
+ -- Alf Gaida <agaida@siduction.org>  Sat, 23 Jun 2012 15:07:34 +0200
+
 desktop-defaults (1.4.1) unstable; urgency=low
 
   * build closes #721
