--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.4) unstable; urgency=low
+
+  * fixed debian/desktop-defaults-xfce.fll-xfce-desktop.default XFCE_SPLASH_THEME
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sun, 24 Jun 2012 21:19:32 +0200
+
 desktop-defaults (1.4.3) unstable; urgency=low
 
   * change some scripting 
