--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.4.10) UNRELEASED; urgency=low
+
+  * added TAP_TO_CLICK and set it to true to enable touchpad tabbing 
+  * closes  #826
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Wed, 05 Sep 2012 00:57:09 +0300
+
 desktop-defaults (1.4.9) UNRELEASED; urgency=low
 
   * added GNOME_SESSION_TYPE and set it  to avoid startup warning
