--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.13) UNRELEASED; urgency=low
+
+  * added qtparted pkexec policy to launch qtparted as root for QT flavours 
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Wed, 12 Sep 2012 09:57:09 +0300
+
 desktop-defaults (1.4.12) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
