--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.16) UNRELEASED; urgency=low
+
+  * changed gnome postinst file for push in schema gnome settings
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Wed, 22 Sep 2012 17:58:09 +0300
+
 desktop-defaults (1.4.15) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
