--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.17) UNRELEASED; urgency=low
+
+  * changed gnome postinst file for push in schema ${FLL_WALLPAPER}
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Wed, 22 Sep 2012 18:26:09 +0300
+
 desktop-defaults (1.4.16) UNRELEASED; urgency=low
 
   * changed gnome postinst file for push in schema gnome settings
