--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.4.19) UNRELEASED; urgency=low
+
+  * moved some settings from /etc/default/fll-gnome-desktop to 
+    /usr/share/siduction-settings-gnome/siduction-gnome-settings 
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Thu, 27 Sep 2012 23:25:09 +0300
+
 desktop-defaults (1.4.18) UNRELEASED; urgency=low
 
   * moved to siduction-settings-gnome file for disabling automatic updates
