--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.20) UNRELEASED; urgency=low
+
+  * code to setup gnome session type using a cheatcode
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Thu, 04 Oct 2012 20:45:09 +0300
+
 desktop-defaults (1.4.19) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
