--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.23) unstable; urgency=low
+
+  * add wbar autostart
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 20 Oct 2012 18:09:03 +0200
+
 desktop-defaults (1.4.22) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
