--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.24) UNRELEASED; urgency=low
+
+  * added gnome autostart dir for reenable automount-open in installed mode
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Sat, 20 Oct 2012 21:29:03 +0300
+
 desktop-defaults (1.4.23) unstable; urgency=low
 
   * add wbar autostart
