--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-desktop-defaults (1.4.24) UNRELEASED; urgency=low
+desktop-defaults (1.4.24) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
   * added gnome autostart dir for reenable automount-open in installed mode
@@ -6,7 +6,7 @@ desktop-defaults (1.4.24) UNRELEASED; urgency=low
   [ Alf Gaida ]
   * rebuild closes #917
 
- -- Ovidiu Angelescu <convbsd@siduction.net>  Sat, 20 Oct 2012 21:29:03 +0300
+ -- Alf Gaida <agaida@siduction.org>  Sun, 21 Oct 2012 17:21:35 +0200
 
 desktop-defaults (1.4.23) unstable; urgency=low
 
