--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+desktop-defaults (1.4.26) UNRELEASED; urgency=low
+
+  * removed siduction-settings-gnome from desktop-defaults-gnome control file
+    siduction-settings-gnome is a common package for live and installed mode 
+    and should not be removed when fll-installer purge desktop-defaults-gnome  
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Sat, 27 Oct 2012 08:50:09 +0300
+
 desktop-defaults (1.4.25) unstable; urgency=low
 
   * added nox package 
