--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-desktop-defaults (1.4.26) UNRELEASED; urgency=low
+desktop-defaults (1.4.26) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
   * removed siduction-settings-gnome from desktop-defaults-gnome control file
@@ -8,7 +8,7 @@ desktop-defaults (1.4.26) UNRELEASED; urgency=low
   * not agreed, siduction-settings-gnome must be in desktop-defaults
   * closes #937  
 
- -- Ovidiu Angelescu <convbsd@siduction.net>  Sat, 27 Oct 2012 08:50:09 +0300
+ -- Alf Gaida <agaida@siduction.org>  Sat, 27 Oct 2012 12:54:47 +0200
 
 desktop-defaults (1.4.25) unstable; urgency=low
 
