--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.27) unstable; urgency=low
+
+  * removed siduction-art-wallpaper from desktop-default-common 
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 28 Oct 2012 23:52:10 +0100
+
 desktop-defaults (1.4.26) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
