--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.28) unstable; urgency=low
+
+  * changed the settings handling for xfce in preseed-user-home
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Wed, 31 Oct 2012 22:21:16 +0100
+
 desktop-defaults (1.4.27) unstable; urgency=low
 
   * removed siduction-art-wallpaper from desktop-default-common 
