--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.34) UNRELEASED; urgency=low
+
+  * code to enable kickoff menu in KDE
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Sun, 25 Nov 2012 15:49:09 +0200
+
 desktop-defaults (1.4.33) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
