--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.35) unstable; urgency=low
+
+  * added copy wbar-config to home
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 01 Dec 2012 14:27:31 +0100
+
 desktop-defaults (1.4.34) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
