--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.36) unstable; urgency=low
+
+  * fixed a typo  in xfce/preseed-user-home
+
+ -- Torsten Wohlfarth <towo@siduction.org>  Sat, 01 Dec 2012 15:13:28 +0100
+
 desktop-defaults (1.4.35) unstable; urgency=low
 
   * added copy wbar-config to home
