--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.4.40) UNRELEASED; urgency=low
+
+  * changed 52detect-resolution to work also for kde
+    this should work also for dm's wallpaper resolution
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Fri, 14 Dec 2012 03:54:21 +0200
+
 desktop-defaults (1.4.39) unstable; urgency=low
 
   * removed background settings for rqt
