--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.4.43) UNRELEASED; urgency=low
+
+  * added siduction wallpapers to gnome wallpaper list
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Mon, 31 Dec 2012 11:24:31 +0200
+
 desktop-defaults (1.4.42) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
