--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+desktop-defaults (1.4.45) UNRELEASED; urgency=low
+
+  * removed gdm3 wallpaper code from /etc/init.d/fll-gnome-desktop for
+    using debian way to add gdm3 wallpaper in siduction-settings-gnome
+  * removed /etc/X11/Xsession.d/52detect-resolution file since we'll use
+    siduction-dynamic-dms package instead
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Tue, 26 Jan 2013 01:30:19 +0200
+
 desktop-defaults (1.4.44) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
