--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.4.46) UNRELEASED; urgency=low
+
+  * changed gnome postinst to add only ${FLL_WALLPAPER} 
+    to gnome wallpaper list
+
+ -- Ovidiu Angelescu <convbsd@siduction.net>  Sat, 16 March 2013 20:08:41 +0200
+
 desktop-defaults (1.4.45) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
