--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+desktop-defaults (1.5.0) unstable; urgency=low
+
+  * remove unneeded parts from common, which are now handled in 
+    siduction-live-settings
+  * refs #1175
+
+ -- Alf Gaida <agaida@siduction.org>  Wed, 01 May 2013 15:03:11 +0200
+
 desktop-defaults (1.4.46) unstable; urgency=low
 
   [ Ovidiu Angelescu ]
