--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+desktop-defaults (1.5.1) unstable; urgency=low
+
+  * lxde desktop init background.png -> background.jpg  
+  * refs #1193
+
+ -- Alf Gaida <agaida@siduction.org>  Wed, 15 May 2013 20:59:18 +0200
+
 desktop-defaults (1.5.0) unstable; urgency=low
 
   * remove unneeded parts from common, which are now handled in 
