--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+desktop-defaults (1.5.4) unstable; urgency=medium
+
+  * remove rqt frome sources completely	 
+
+ -- Alf Gaida <agaida@siduction.org>  Mon, 27 Apr 2015 20:13:21 +0200
+
 desktop-defaults (1.5.3) unstable; urgency=medium
 
   * new Standards 3.9.6
